--- a/style.css
+++ b/style.css
@@ -3,6 +3,37 @@ body {
   font-family: 'ABeeZee';
   overflow-x: hidden;
 }
+.animatable {
+
+  /* initially hide animatable objects */
+  visibility: hidden;
+
+  /* initially pause animatable objects their animations */
+  -webkit-animation-play-state: paused;
+  -moz-animation-play-state: paused;
+  -o-animation-play-state: paused;
+  animation-play-state: paused;
+}
+
+/* show objects being animated */
+.animated {
+  visibility: visible;
+
+  -webkit-animation-fill-mode: both;
+  -moz-animation-fill-mode: both;
+  -o-animation-fill-mode: both;
+  animation-fill-mode: both;
+
+  -webkit-animation-duration: 1s;
+  -moz-animation-duration: 1s;
+  -o-animation-duration: 1s;
+  animation-duration: 1s;
+
+  -webkit-animation-play-state: running;
+  -moz-animation-play-state: running;
+  -o-animation-play-state: running;
+  animation-play-state: running;
+}
 .header {
   position: fixed;
   top: 0;
@@ -156,12 +187,18 @@ body {
     transform: scale(1);
   }
 }
+.back2 table tr td h4 {
+  animation-name: scaleIn;
+  animation-duration: 2s;
+}
 .back2 .back2_image {
   width: 17rem;
   height: 13rem;
   position: relative;
   overflow: hidden;
   border: 4px solid yellow;
+  animation-name: scaleIn;
+  animation-duration: 2s;
 }
 .back2 .back2_image .img1 {
   width: 100%;
@@ -252,6 +289,26 @@ body {
     opacity: 1;
   }
 }
+@keyframes slideLeft {
+  from {
+    left: -50rem;
+    opacity: 0;
+  }
+  to {
+    left: 0;
+    opacity: 1;
+  }
+}
+@-webkit-keyframes slideLeft {
+  from {
+    left: 50rem;
+    opacity: 0;
+  }
+  to {
+    left: 0;
+    opacity: 1;
+  }
+}
 .back3 .ss_content {
   position: absolute;
   top: 0;
@@ -269,6 +326,7 @@ body {
   font-weight: lighter;
 }
 .back3 .ss_content .room_card {
+  position: relative;
   width: 14rem;
   height: 18rem;
   padding: 1rem;
@@ -276,6 +334,8 @@ body {
   border: 3px solid white;
   cursor: pointer;
   transition: 190ms;
+  animation-name: fadeIn;
+  animation-duration: 2s;
 }
 .back3 .ss_content .room_card:hover {
   transition: 190ms;
@@ -306,6 +366,8 @@ body {
   vertical-align: middle;
   margin-top: 16px;
   width: 100%;
+  animation-name: fadeIn;
+  animation-duration: 2s;
 }
 .back5 {
   position: relative;
